# pgcuts

./: .gitignore  .readthedocs.yaml  README.md  pylintrc  pyproject.toml
docs/: make.bat  requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: data.rst  graph.rst  hyp2f1.rst  losses.rst  metrics.rst  utils.rst
docs/source/getting_started/: installation.rst  quickstart.rst
docs/source/user_guide/: configuration.rst  evaluation.rst  feature_extraction.rst  graph_construction.rst  hncut.rst  hrcut.rst  prcut.rst
pgcuts/: __init__.py  cluster.py  data.py  functional.py  graph.py  layers.py  metrics.py  optim.py
pgcuts/algorithms/: __init__.py  cuts.py  turtle.md  turtle.py
pgcuts/hyp2f1/: README.md  __init__.py  autograd.py  cuda_kernels.py  funct.py  test_hypf21.ipynb  triton_gamma.py  triton_kernels.py
pgcuts/losses/: __init__.py  flashcut.py  functional.py  hycut.py  pncut.py  prcut.py
pgcuts/models/: __init__.py  layers.py
pgcuts/utils/: __init__.py  data.py  data_utils.py  gradient_monitor.py  optim.py  pairs.py
scripts/: bench_all.py  benchmark.py  benchmark_cuts.py  benchmark_online.py  compute_baseline_cuts.py  helices_balanced_vs_unbalanced.py  helices_pgcut.py  hycut_linear.py  hycut_nonlinear.py  nonparam_ncut.py  run_missing_baselines.py
scripts/configs/: benchmark.yaml  benchmark_online.yaml  ncut.yaml  prcut.yaml  sweep.yaml
tests/: bench_flashcut.py  test_cpp_reference.py  test_cuda_lse.py  test_flashcut.py  test_gradcheck.py  test_hyp2f1.py  test_ncut.py
