[project]
name = "PGCuts"
version = "0.1.0"
description = "Probabilistic Graph Cuts"
authors = [
    {name = "Ayoub G.",email = "research@ayghri.me"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch (>=2.8.0,<3.0.0)",
    "torchvision (>=0.23.0,<0.24.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "wandb (>=0.22.1,<0.23.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "munkres (>=1.1.4,<2.0.0)",
    "pyamg (>=5.3.0,<6.0.0)",
    "numba (>=0.62.1,<0.63.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scipy (>=1.15.0,<2.0.0)",
    "clip @ git+https://github.com/openai/CLIP.git"
]

[tool.poetry]
packages = [{include = "pgcuts", from = "."}]


[tool.poetry.group.dev.dependencies]
pandas = "^2.3.3"
ipykernel = "^6.30.1"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
